fixed minor buggs